# q-lock-attractor-engine

./: .gitignore  BASIN_MODE_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-ATTRAQTOR-LABS.md  LICENSE-QLOCK.md  LICENSE.md  LICENSE.txt  Makefile  NOTICE  README-QLOCK.md  README.md  ROADMAP.md  SECURITY.md  VERIFICATION.md  WHITEPAPER_QLOCK.md  Website  __init__.py  final_demo.sh  hybrid_engine.py  identity_engine.py  pyproject.toml  q_lock_cli.py  q_lock_engine.py  qlock_engine.py  qlock_history.json  requirements.txt  setup.cfg  setup.py  test_basin_mode.sh  test_full_workflow.sh  test_import_engine.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ocir-pip-ci.yml  python-app.yml  qlock-ci.yml
Src/qlock/: __init__.py  engine.py  identity.py  perturbation.py  qlock.py
Website/website/: Benchmarks.html  Contact.html  Pricing.html
adapters/: __init__.py  metrics.py  reporting.py  tractor_engine.py  validator_engine.py
benchmarks/: README.md
docs/: ARCHITECTURE.md  AUDITABILITY.md  CITATION.md  CLAIM_BOUNDARY.md  EVIDENCE_INDEX.md  FAILURE_MODES.md  FAQ.md  GOVERNANCE.md  INTEGRATION.md  LIMITATIONS.md  ONE_PAGER.md  PRODUCT.md  RISK_DISCLOSURE.md  SAFETY_MODEL.md  USE_CASES.md  WHEN_NOT_TO_USE.md  WHEN_TO_USE.md  architecture.md  benchmarks.md  industry_positioning.md  modes.md  safety.md
examples/: README.md  basic_usage.py  explorer_validator_workflow.py  mirror_tractor_workflow.py  proof_run.py  test_circuit.qasm
explorer_engine/: README.md  __init__.py  explorer_engine.py
mirror_engine/: README.md  __init__.py  mirror_engine.py
notebooks/: q_lock_azure_demo.ipynb
proofs/: canonical_proof_run.md
qlock/: __init__.py  engine.py  guards.py  history.py  metrics.py  observer.py  types.py
qlock/api/: __init__.py  client.py
qlock/engine/: __init__.py  core.py  fidelity.py  policy.py  refusal.py  scalar.py  watermark.py  witness_phase.py
qlock/metrics/: __init__.py  stability.py
qlock/modes/: __init__.py  fidelity.py  scalar_guarded.py  watermark.py  (+1 more)
scripts/: azure_setup.sh
tests/: test_engine.py  test_explorer_engine.py  test_import_engine.py  test_mirror_engine.py  test_refusal.py  test_repeatability.py  test_scalar_guard.py  test_smoke.py
website/: benchmarks.html  index.html  pricing.html  product.html  style.css  styles.css
(+5 files in other folders)
