[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlock"
version = "0.1.0"
description = "Q-LOCK Attractor Engine — Identity-Locked Quantum Circuit Stabilization"
authors = [
  { name = "AttraQtor Labs LLC", email = "nic_hensley@proton.me" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE-ATTRAQTOR-LABS.md" }

dependencies = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.13.3",
  "qiskit-ibm-runtime>=0.22.0",
  "numpy>=1.23",
]

[project.scripts]
qlock = "qlock.cli:main"
