[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlock"
version = "0.1.0"
description = "Q-LOCK Attractor Engine — Identity-Locked Quantum Circuit Stabilization"
authors = [
  { name = "AttraQtor Labs LLC", email = "nic_hensley@proton.me" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE-ATTRAQTOR-LABS.md" }

dependencies = [
  "qiskit>=0.43.0,<2.0.0",
  "qiskit-aer>=0.12.0,<1.0.0",
  "qiskit-ibm-runtime>=0.9.0,<1.0.0",
  "numpy>=1.20.0,<2.0.0",
  "scipy>=1.7.0,<2.0.0",
  "matplotlib>=3.3.0,<4.0.0",
  "pandas>=1.3.0,<3.0.0",
]

[project.scripts]
qlock = "q_lock_cli:main"
